@@ -185,7 +185,7 @@ TRUNKMSD=1					; MSD digits to strip (usually 1 or 0)
 ;
 ; Timing list for includes is 
 ;
-;   <time range>,<days of week>,<days of month>,<months>
+;   <time range>,<days of week>,<days of month>,<months>[,<timezone>]
 ;
 ; Note that ranges may be specified to wrap around the ends.  Also, minutes are
 ; fine-grained only down to the closest even minute.
